# vds

./: .gitignore  .gitmodules  .travis.yml  Adafruit_BMP280.cpp  Adafruit_BMP280.h  CMakeLists.txt  ClassDiagram.cd  ClassDiagram1.cd  DAQ.cpp  DataLog.cpp  DragBlades.cpp  GUI.cpp  RCRPID.cpp  RCR_Bmp180.cpp  RCR_Bmp180.h  README.md  VDS-V2-Software.vcxproj  VDS-V2-Software.vcxproj.filters  VDS-V2_1-Software.ino  build  build.sh  build_debug  build_debug.sh  daq.cc  daq.hh  drag_blades.cpp  drag_inducers.cc  drag_inducers.hh  flight_log.cc  flight_log.hh  globals.cc  globals.hh  gui.cc  gui.hh  linux-console.sln  linux-console.vcxproj  logging.hh  main.cpp  matrix.cc  matrix.hh  (+19 more)
__vm/: .vds.vsarduino.h  Compile.vmps.xml  Configuration.Debug.vmps.xml  Configuration.Release.vmps.xml  Upload.vmps.xml
gtest/: gtest.vcxproj
linux/: CMakeLists.txt  Makefile  arm-linux-gnueabihf.cmake  armeabihf.cmake  googletest.cmake  vds.sln  vds.vcxproj  vds.vcxproj.filters
linux/config/spi/: spi0-00a0.dts  spi1-00a0.dts  spi_setup
linux/kernel/: .gitattributes
linux/src/: daq.hh  drag_inducers.cc  flight_log.cc  limit_switches.hh  pid.cc  pin_io.hh  state_log.hh  vds.hh  vds_maths.hh
linux/src/rcr/: rcr_maths.h  rcr_util.cc  rcr_util.hh
linux/src/rcr/beaglebone/io/file/: fileio.hh  justins_code_here
linux/src/rcr/beaglebone/io/spi/: spi.cc  spi.hh
linux/src/rcr/linux/spi/: spi.cc  spi.hh
linux/src/rcr/sensors/vn/: vectornav.cc  vectornav.hh
linux/src/rcr/util/: publish.h
linux/src/rcr/vds/: daq.cc  gui.cc  main.cc  vds.cc  vehicle_state.hh
linux/src/rcr/vds/blades/: limit_switches.hh
linux/src/rcr/vds/io/: pin_io.cc  pin_io.hh
linux/tests/: project.h  unit_tests.cc
src/: daq.cc  daq.hh  digital_io.hh  drag_inducers.cc  drag_inducers.hh  flight_log.cc  flight_log.hh  globals.hh  gui.cc  gui.hh  limit_switches.hh  logging.cc  main.cc  matrix.cc  pid.cc  pin_io.cc  rcr_util.cc  rcr_util.hh  rcr_util_unittests.cc  requests.cc  vds.hh
